<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AddShoeFragment">
    
    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>


    <!--Constraint layout was used here for use of features in layout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/shoe_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/editTextBrandName"
            app:layout_constraintEnd_toStartOf="@+id/editTextShoeName"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addNewShoe" />

        <EditText
            android:id="@+id/editTextShoeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Shoe name"
            android:ems="10"
            android:hint="@string/black_boots"
            android:text="@={shoe.name}"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@id/editTextBrandName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoeName"
            app:layout_constraintTop_toBottomOf="@id/addNewShoe" />

        <TextView
            android:id="@+id/addNewShoe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_shoe"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintBottom_toTopOf="@id/shoeName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/brand"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextBrandName"
            app:layout_constraintEnd_toStartOf="@+id/editTextBrandName"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoeSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/shoe_size"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumberDecimalShoeSize"
            app:layout_constraintEnd_toStartOf="@+id/editTextNumberDecimalShoeSize"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextDescription"
            app:layout_constraintEnd_toStartOf="@+id/editTextDescription"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextBrandName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Brand name"
            android:ems="10"
            android:hint="@string/gucci"
            android:text="@={shoe.company}"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@id/editTextNumberDecimalShoeSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/brand"
            app:layout_constraintTop_toBottomOf="@id/editTextShoeName" />

        <EditText
            android:id="@+id/editTextNumberDecimalShoeSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Shoe size"
            android:ems="10"
            android:hint="@string/_6_5"
            android:inputType="numberDecimal"
            android:text="@={`` + shoe.size}"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@id/editTextDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoeSize"
            app:layout_constraintTop_toBottomOf="@id/editTextBrandName" />


        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Description"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/shoe_description"
            android:text="@={shoe.description}"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@id/saveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@id/editTextNumberDecimalShoeSize" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextDescription" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancelButton"
            app:layout_constraintTop_toBottomOf="@id/editTextDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>